tests/bad/func_bad_arg_type.oc
/// fail: Argument x has type bool but expected i32

def foo(x: i32) { }

def main() {
    foo(true)
}